# srvrs

./: Cargo.toml  README.md  config.yaml  prompt02.txt  test_install.sh
ai/stable-diffusion/: Dockerfile  cache-models.py  run.sh  sd.sh  stable-diffusion-2.py
ai/whisper/: Dockerfile  whisper.sh
res/: install.sh  srvrs-distributor.service  srvrs-whisper.service  srvrs.service  srvrs.yaml  whisper.sh
src/: main.rs  srvrs.rs
src/distributor/: distributor.rs  main.rs
src/srvrs/: activity.rs  config.json  gpu.rs  main.rs  srvrs.rs
