[package]
name = "srvrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
file-owner = "0.1.1"
log = "0.4.17"
notify = "5.1.0"
systemd-journal-logger = "0.7.0"
