[package]
name = "srvrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
file-owner = "0.1.1"
infer = "0.13.0"
log = "0.4.17"
notify = "5.1.0"
regex = "1.7.1"
serde = "1.0.157"
serde_yaml = "0.9.19"
simple_logger = "4.0.0"
systemd-journal-logger = "0.7.0"
users = "0.11.0"

[[bin]]
name="srvrs"
path="src/srvrs/main.rs"

[[bin]]
name="srvrs-distributor"
path="src/distributor/main.rs"
